I think i broke this one too

--- a/Project4/Dockerfile
+++ b/Project4/Dockerfile
@@ -2,16 +2,16 @@
 FROM node:18-bullseye
 
 # Set the working directory inside the container
-WORKDIR /app
+WORKDIR /usr/src/app/angular-site
 
-# Copy the package.json file to the working directory
-COPY angular-site/wsu-hw-ng-main/package.json ./
+# Copy the Angular application files
+COPY /home/ubuntu/f24cicd-RecycledDrit/Project4/angular-site/wsu-hw-ng-main /usr/src/app/angular-site
 
-# Install application dependencies
-RUN npm install
+# Install the global command line dependency for angular
+RUN npm install -g @angular/cli
 
-# Copy the rest of the Angular application files
-COPY angular-site/wsu-hw-ng-main/ ./
+# Install angular application dependencies
+Run npm install
 
 # Start the Angular application
 CMD ["ng", "serve", "--host", "0.0.0.0"]
