--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2 # checks the code in the repository
 
       - name: Log in to DockerHub
-        uses: docker/login-action@v2 # uses the username and token secrets to login to dockerhub
+        uses: docker/login-action@v3 # uses the username and token secrets to login to dockerhub
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
@@ -26,9 +26,10 @@ jobs:
           images: recycleddirt/francis-ceg3120
           tags: |
             latest
-            ${{ github.ref_name }} # This will give you just the tag name (e.g., v1.2.3)i
-            ${{ github.ref_name:0:2 }} # This extracts the major version (e.g., v1)
-            ${{ github.ref_name:0:4 }} # This extracts the major and minor version (e.g., v1.2)
+            ${{ github.ref_name }} # This will give you just the tag name (e.g., v1.2.3)
+            type=semver
+            pattern={{.Major}} # This extracts the major version (e.g., v1)
+            pattern={{.Major}}.{{.Minor}} # This extracts the major and minor version (e.g., v1.2)
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6.10.0 # uses other action
