hopefuly did semver right this time

--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -26,10 +26,9 @@ jobs:
           images: recycleddirt/francis-ceg3120
           tags: |
             latest
-            ${{ github.ref_name }} # This will give you just the tag name (e.g., v1.2.3)
-            type=semver
-            pattern={{.Major}} # This extracts the major version (e.g., v1)
-            pattern={{.Major}}.{{.Minor}} # This extracts the major and minor version (e.g., v1.2)
+            type=semver,pattern={{version}} # This will give you just the tag name (e.g., v1.2.3)
+            type=semver,pattern={{major}} # This extracts the major version (e.g., v1)
+            type=semver,pattern={{major}}.{{minor}} # This extracts the major and minor version (e.g., v1.2)
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6.10.0 # uses other action
