--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -26,7 +26,7 @@ jobs:
           images: recycleddirt/francis-ceg3120
           tags: |
             latest
-            type=semver,pattern={{version}} # This will give you just the tag name (e.g., v1.2.3)
+            type=semver,pattern={{version}} # This uses the full version (e.g., v1.2.3)
             type=semver,pattern={{.Major}} # This extracts the major version (e.g., v1)
             type=semver,pattern={{.Major}}.{{.Minor}} # This extracts the major and minor version (e.g., v1.2)
 
